Refactor Totem Stacking Logic